objects/pse__VersionItem_Issue__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A capture of a project issue taken at the time the version is created.</description>
    <fields>
        <fullName>pse__AccountId__c</fullName>
        <description>The Id for the account relating to the issue referenced in the project version.</description>
        <inlineHelpText>The Id for the account relating to the issue referenced in the project version.</inlineHelpText>
        <label>Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__AccountName__c</fullName>
        <description>The name of the account relating to the issue referenced in the project version.</description>
        <inlineHelpText>TThe name of the account relating to the issue referenced in the project version.</inlineHelpText>
        <label>Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Action_Plan__c</fullName>
        <description>A description for the plan of action against the issue referenced in the project version.</description>
        <inlineHelpText>A description for the plan of action against the issue referenced in the project version.</inlineHelpText>
        <label>Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Closed_Date__c</fullName>
        <description>The date on which the issue referenced in the project version was closed.</description>
        <inlineHelpText>The date on which the issue referenced in the project version was closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The closed status of the issue referenced in the project version.</description>
        <inlineHelpText>The closed status of the issue referenced in the project version.</inlineHelpText>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Comments__c</fullName>
        <description>Additional comments about the issue referenced in the project version.</description>
        <inlineHelpText>Additional comments about the issue referenced in the project version.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Date_Raised__c</fullName>
        <description>The date on which the issue referenced in the project version was raised.</description>
        <inlineHelpText>The date on which the issue referenced in the project version was raised.</inlineHelpText>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Impact__c</fullName>
        <description>The impact of the issue referenced in the project version.</description>
        <inlineHelpText>The impact of the issue referenced in the project version.</inlineHelpText>
        <label>Impact</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__IssueOwnerId__c</fullName>
        <description>The Id for resource assigned as the owner of the issue referenced in the project version.</description>
        <inlineHelpText>The Id for resource assigned as the owner of the issue referenced in the project version.</inlineHelpText>
        <label>Issue Owner Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__IssueOwnerName__c</fullName>
        <description>The name of the resource assigned as the owner of the issue referenced in the project version.</description>
        <inlineHelpText>The name of the resource assigned as the owner of the issue referenced in the project version.</inlineHelpText>
        <label>Issue Owner Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Issue_Description__c</fullName>
        <description>A description of the issue referenced in the project version.</description>
        <inlineHelpText>A description of the issue referenced in the project version.</inlineHelpText>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Issue_Name__c</fullName>
        <description>The name of the issue referenced in the project version.</description>
        <inlineHelpText>The name of the issue referenced in the project version.</inlineHelpText>
        <label>Issue Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Issue_Number__c</fullName>
        <description>A unique auto-generated reference for the issue referenced in the project version.</description>
        <inlineHelpText>A unique auto-generated reference for the issue referenced in the project version.</inlineHelpText>
        <label>Issue Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneId__c</fullName>
        <description>The Id of the milestone relating to the issue referenced in the project version.</description>
        <inlineHelpText>The Id of the milestone relating to the issue referenced in the project version.</inlineHelpText>
        <label>Milestone Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__MilestoneName__c</fullName>
        <description>The name of the milestone relating to the issue referenced in the project version.</description>
        <inlineHelpText>The name of the milestone relating to the issue referenced in the project version.</inlineHelpText>
        <label>Milestone Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OpportunityId__c</fullName>
        <description>The Id of the opportunity relating to the issue referenced in the project version.</description>
        <inlineHelpText>The Id of the opportunity relating to the issue referenced in the project version.</inlineHelpText>
        <label>Opportunity Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OpportunityName__c</fullName>
        <description>The name of the opportunity relating to the issue referenced in the project version.</description>
        <inlineHelpText>The name of the opportunity relating to the issue referenced in the project version.</inlineHelpText>
        <label>Opportunity Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__OriginalId__c</fullName>
        <description>The original Id of the issue referenced in the project version.</description>
        <inlineHelpText>The original Id of the issue referenced in the project version.</inlineHelpText>
        <label>Original Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Priority__c</fullName>
        <description>The priority status of the issue referenced in the project version.</description>
        <inlineHelpText>The priority status of the issue referenced in the project version.</inlineHelpText>
        <label>Priority</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ProjectTaskId__c</fullName>
        <description>The Id for the project task relating to the issue referenced in the project version.</description>
        <inlineHelpText>The Id for the project task relating to the issue referenced in the project version.</inlineHelpText>
        <label>Project Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ProjectTaskName__c</fullName>
        <description>The name of the project task relating to the issue referenced in the project version.</description>
        <inlineHelpText>The name of the project task relating to the issue referenced in the project version.</inlineHelpText>
        <label>Project Task Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Risk_Id__c</fullName>
        <description>The Id of the risk associated with the issue referenced in the project version.</description>
        <inlineHelpText>The Id of the risk associated with the issue referenced in the project version.</inlineHelpText>
        <label>Risk Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Risk_Name__c</fullName>
        <description>The name of the risk associated with the issue referenced in the project version.</description>
        <inlineHelpText>The name of the risk associated with the issue referenced in the project version.</inlineHelpText>
        <label>Risk Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Severity__c</fullName>
        <description>The severity of the issue referenced in the project version originally calculated by multiplying the Impact value by the Priority value.</description>
        <inlineHelpText>The severity of the issue referenced in the project version originally calculated by multiplying the Impact value by the Priority value.</inlineHelpText>
        <label>Severity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status for the issue referenced in the project version.</description>
        <inlineHelpText>The status for the issue referenced in the project version.</inlineHelpText>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Version__c</fullName>
        <description>A lookup to the project version.</description>
        <inlineHelpText>A lookup to the project version.</inlineHelpText>
        <label>Version</label>
        <referenceTo>pse__Version__c</referenceTo>
        <relationshipLabel>Version Item Issues</relationshipLabel>
        <relationshipName>VersionItem_Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Version Item Issue</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVI-{0000}</displayFormat>
        <label>Version Item Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Version Item Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>